Removed Strat Cloud

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -72,7 +72,7 @@
 
             <p class="ms-font-xl">Ensure you never email the wrong person again with Domain Guardian. Our app double-checks all the domains you're emailing, providing you with peace of mind and preventing embarrassing email mishaps.</p>
     </main>
-            <a href="https://www.strategnos.com" class="cta-button">Powered by Strategnos</a>
+            <a href="#" class="cta-button">Powered by Strategnos</a>
             
 </body>
 
